# ats-optimized-resume-agent-skill

./: .gitignore  PRIVACY.md  PUBLISHING_GUIDE.md  README.md  README_zh.md  SKILL.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
examples/: sample_master_resume.md  sample_resume_json.json
renderer/examples/: run_example.py  sample_jd.md
renderer/examples/output/: alex_chen_no_skills.docx  alex_chen_stripe.docx  alex_chen_stripe_v2.docx  install_test.docx  manual_install_test.docx
renderer/src/: cli.py  main.py
renderer/src/rendering/: config.py  render_docx.py
renderer/src/schemas/: resume_schema.py
renderer/src/validation/: validate_output.py
renderer/tests/: test_validation.py
skills/build-tailored-resume/: SKILL.md
src/rendering/: render_docx.py
src/utils/: utils.py
tests/: test_rendering.py
